force-app/main/default/objects/TarifTransporteur__c/TarifTransporteur__c.object-meta.xml
<CustomObject>
    <label>Tarif Transporteur</label>
    <pluralLabel>Tarifs Transporteurs</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Référence Tarif</label>
        <displayFormat>TARIF-{0000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>