force-app/main/default/objects/TarifTransporteur__c/fields/DelaiLivraison__c.field-meta.xml
<CustomField>
    <fullName>DelaiLivraison__c</fullName>
    <label>Délai de Livraison (jours)</label>
    <precision>3</precision>
    <scale>0</scale>
    <required>true</required>
    <type>Number</type>
</CustomField>