force-app/main/default/objects/TarifTransporteur__c/fields/Transporteur__c.field-meta.xml
<CustomField>
    <fullName>Transporteur__c</fullName>
    <label>Transporteur</label>
    <referenceTo>Transporteur__c</referenceTo>
    <relationshipLabel>Tarifs</relationshipLabel>
    <relationshipName>Tarifs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>